...
      default:
        otherChildren.push(ch);
    }
  });

  return (
    <View style={styles.container} testID="home-layout">
      <LinearGradient
        // colors={[
        //   theme.colors.primary,
        //   theme.colors.secondary,
        //   '#7AC6C6',
        // ]}
...
