...
        <View style={styles.contentWrapper}>
          <FadeEffect style={styles.messageContainer} show={messgeIsVisible}>
            {content}
          </FadeEffect>
          <View style={styles.actionsPlaceholder}>
            <FadeEffect style={styles.actionsContainer} show={actionsAreVisible}>
              <GenericChipButton onPress={() => next(7)} text={translate('commons.general.no')} testID="step-6-no" />
              <GenericChipButton onPress={() => next(8)} text={translate('commons.general.yes')} testID="step-6-yes" />
            </FadeEffect>
          </View>
        </View>
        {/*Circular content should not be touched*/}
        <View pointerEvents="none">
          <CircularContent progress={0} />
...
